<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/login_person"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/et_selector"
            android:minHeight="60dp"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:hint="@string/input_user_name"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:drawableStart="@drawable/login_key"
            android:background="@drawable/et_selector"
            android:minHeight="60dp"
            android:gravity="center_vertical"
            android:hint="@string/input_password"
            android:drawablePadding="10dp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/et_password_twice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/login_key"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/et_selector"
            android:minHeight="60dp"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:hint="@string/input_password_twice"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:drawableStart="@drawable/nickname"
            android:background="@drawable/et_selector"
            android:minHeight="60dp"
            android:gravity="center_vertical"
            android:hint="@string/input_nickname"
            android:drawablePadding="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>