<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.detail.play.PlayFragment"
    android:paddingStart="25dp"
    android:paddingEnd="25dp">

    <ImageView
        android:id="@+id/iv_detail_music_image"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:src="@drawable/default_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:focusable="true"/>

    <com.example.imitationqqmusic.custom.MarqueeTextView
        android:id="@+id/mtv_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_detail_music_image"
        android:textColor="@color/detail_text_color"
        android:textSize="30sp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:layout_marginTop="10dp"
        android:text="@string/default_user_name"
        android:gravity="center_vertical" />

    <TextView
        android:id="@+id/tv_detail_singer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mtv_detail_name"
        android:textSize="18sp"
        android:textColor="@color/detail_text_color"
        android:maxLines="1"
        android:layout_marginTop="5dp"
        android:text="@string/default_user_name"
        android:gravity="center_vertical"/>

    <View
        android:id="@+id/lyric"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_singer"
        app:layout_constraintBottom_toTopOf="@+id/cl_seek_bar_group"
        android:layout_marginTop="5dp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_seek_bar_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@id/cl_detail_command"
        app:layout_constraintTop_toBottomOf="@id/lyric"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <SeekBar
            android:id="@+id/sb_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/bg_sb"
            android:thumbTint="#dcdcdc"
            android:padding="0dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sb_progress"
            android:text="@string/current_time"
            android:textColor="@color/detail_text_color"/>

        <TextView
            android:id="@+id/tv_duration_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sb_progress"
            android:text="@string/current_time"
            android:textColor="@color/detail_text_color" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_detail_command"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/iv_play_pause"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/play_selector"
            android:contentDescription="@string/background"
            android:clickable="true"
            android:focusable="true"/>

        <ImageView
            android:id="@+id/iv_last"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/iv_play_pause"
            app:layout_constraintLeft_toRightOf="@id/iv_play_style"
            android:src="@drawable/last_selector"
            android:contentDescription="@string/background"
            android:clickable="true"
            android:focusable="true"/>

        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/iv_play_pause"
            app:layout_constraintRight_toLeftOf="@id/iv_detail_list"
            android:src="@drawable/next_selector"
            android:contentDescription="@string/background"
            android:clickable="true"
            android:focusable="true"/>

        <ImageView
            android:id="@+id/iv_play_style"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/background"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_one_cycle"
            android:layout_marginStart="5dp"/>

        <ImageView
            android:id="@+id/iv_detail_list"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/list_selector"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/background"
            android:clickable="true"
            android:focusable="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>